# saaga-rules

./: .gitignore  .gitmodules  README.md  configure.sh  mcp.mdc  pyproject.toml
.cursor/rules/: mcp.json
art/: create.mdc  interpret.mdc
development/: core.mdc  doc_guide.mdc  docstring.mdc  exception.mdc  mcp_tool.mdc  plan.mdc
development/context/: verify.mdc
development/jira/: close_issue.mdc  core.mdc  get_issue.mdc  start_issue.mdc
development/linting/: flake8_report.mdc  flake8_report_error.mdc  formatter.mdc
development/prepro/: 02_technical_spec.mdc  04_system_architecture.mdc  05_user_stories.mdc
development/testing/: fix_unittest.mdc  generate_test_report.mdc  make_unittest.mdc  post_run_pytest.mdc  test_report_error.mdc  test_report_success.mdc
external_ops/negotiate/: prep.mdc  strategy.mdc
internal_ops/: approve.mdc  calendly.mdc  teamzoom.mdc  vision.mdc
internal_ops/communication/: decisions.mdc  messaging.mdc
internal_ops/hiring/: recruiting.mdc
marketing/social/: post.mdc
operations/: calendly.mdc  onboard.mdc  outsource.mdc
operations/communication/: daily.mdc  weekly.mdc
operations/negotiate/: policy.mdc
prepro/: 01_vision_statement.mdc  03_tech_stack.mdc  06_sprint_development_plan.mdc
preproduction/: 01_vision_statement.mdc  02_technical_requirements.mdc  03_technology_stack.mdc  04_system_architecture.mdc  05_user_stories.mdc  06_sprint_development_plan.mdc  make_vision_statement.mdc
scripts/: add_submodule.sh
social/: critique.mdc  latest_recording.mdc  text.mdc  zoom_to_post.mdc
utils/: make_mcp_json.py
(+99 files in other folders)
